syntax = "proto3";

package stormgrpc;

option go_package = "../stormgrpc/";

// The StormWorker service definition.
service StormWorker {
  rpc PerformOperation (StormworkerRequest) returns (StormworkerResponse);
}

// The request message containing operation details.
message StormworkerRequest {
  string operation = 1;         // Custom operation
  string input_file_name = 2;   // The name of the file to be processed.
  int32 range_start = 3;        // The start of the range in the file (inclusive).
  int32 range_end = 4;          // The end of the range in the file (inclusive).
  string output_file_name = 5;  // The name of file to write outputs to. Append ?
  int32 num_tasks = 6;          // The number of tasks per stage
  bool aggregate_output = 7;     // Last stage of the process - "simple" / "complex"
  int32 stage = 8;              // Phase of the task
  int32 task_id = 9;            // Task ID
  int32 lines_processed = 10;   // The end of the range in the file (inclusive).
}

// The response message containing the operation result.
message StormworkerResponse {
  string status = 1;            // The status of the operation (e.g., "success", "failure").
  string message = 2;           // A detailed message about the operation result.
}
